# Notebook-AuroraTest

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  qrc.qrc
DiffFunction/: DiffWidget.cpp  DiffWidget.h  myersdiff.cpp  myersdiff.h
QScintilla/lib/: qscintilla2_qt5.lib
SqlParserWindow/: SqlParserWindow.cpp  SqlParserWindow.h
folderDiff/: CompareDialog.cpp  CompareDialog.h  FolderCompareWidget.cpp  FolderCompareWidget.h
folderDiff/ctl/: zfolderctl.cpp
folderDiff/diff/: zfilediff.cpp
folderDiff/util/: zfile.cpp  zfile.h
folderDiff/widget/: zcenterwidget.cpp  zcenterwidget.h  ztopwidget.cpp  ztopwidget.h
folderDiff/widget/file/: zfilewidget.cpp  zfilewidget.h
folderDiff/widget/folder/: zfolderwidget.cpp  zfolderwidget.h
jsvariablereplacer/: jsvariablereplacer.cpp  jsvariablereplacer.h
